@@ -21,7 +21,6 @@
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.css"/>
     <link rel="stylesheet" type="text/css" href="css/jquery.contextMenu.css"/>
 	<link rel="stylesheet" type="text/css" href="css/tipped.css" />
-	<link rel="stylesheet" type="text/css" href="css/jquery.contextMenu.css"/>
 	<link rel="stylesheet" type="text/css" href="css/jqueryFileTree.css" />
 	<link rel="stylesheet" type="text/css" href="css/mediumselect.css"/>       
     <link rel="stylesheet" type="text/css" href="css/layout.css"/>
@@ -32,6 +31,7 @@
     <script type="text/javascript" src="js/jquery.contextMenu.js"></script>
 	<script type="text/javascript" src="js/jquery.tipped-1.5.min.js"></script>
 	<script type="text/javascript" src="js/jqueryFileTree.js"></script>	
+	<script type="text/javascript" src="js/jquery.scrollTo-min.js"></script>
 	<script type="text/javascript" src="js/jquery.jec-1.2.5.js"></script>
 	
 	<!-- Oracle RDP Control -->
